Set z-index CSS property to make sure autosuggest is always on top

--- a/public/stylesheets/nwbib.css
+++ b/public/stylesheets/nwbib.css
@@ -76,6 +76,7 @@ ul#root {
 	box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
 	text-decoration: underline;
 	color: blue;
+	z-index: 100 !important;
 }
 
 #map {
